<resources>
    <string name="app_name">FoodNowServer</string>
    <string name="slogan">We transport products to customers as quickly as your next 5 minutes later of alarm</string>
    <string name="buttonSignIn">SIGN IN</string>
    <string name="editTextPhoneNo">Phone Number</string>
    <string name="editTextPassword">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="IconMenu">Menu</string>
    <string name="IconCart">Cart</string>
    <string name="IconOrder">Order</string>
    <string name="IconLogout">Sign Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>